# uc-bot

./: .gitignore  README.md  agent.py  config.py  process_to_vectors.py  pyproject.toml
data/: cleaned_pages.json
uc_db/: chroma.sqlite3
