[project]
name = "rag-platform"
version = "0.1.0"
description = "Simple RAG chatbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    "gradio>=6.14.0",
    "jq>=1.11.0",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.2.2",
]
